--- a/styles/main.css
+++ b/styles/main.css
@@ -17,25 +17,45 @@ header.main section {
   overflow: auto;
 }
 
-header.main section div {
-  width: 120px;
-  background-color: #fff;
-  height: 35px;
+header.main section div,
+header.main section h4,
+header.main section h3 {
   margin: 7px;
   padding: 0;
+  height: 35px;
   float: left;
+  color: #fff;
 }
 
-header.main section div:first-child {
+header.main section div {
   width: 35px;
+  background-color: #fff;
+  margin-left: 16px;
 }
 
-header.main section div:last-child {
+header.main section h3 {
+  width: 120px;
+  height: 35px;
+  text-align: center;
+  padding-top: 8px;
+  font-size: 1.70em;
+  font-weight: 300;
+}
+
+h3 span {
+  color: lightblue;
+}
+
+header.main section h4 {
   float:right;
-  height: 48px;
   width: 76px;
+  height: 48px;
   background: #0070A4;
   margin: 0;
+  text-align: center;
+  padding-top: 17px;
+  font-size: 1.3em;
+  font-weight: 400;
 }
 
 .hero {
@@ -77,7 +97,7 @@ header.main section div:last-child {
 }
 
 .hero .features li {
-  background: #fff;
+  background: none;
   height: 70px;
   margin: 0 auto 30px;
   overflow: auto;
@@ -85,7 +105,8 @@ header.main section div:last-child {
   display: block;
 }
 
-.hero .features li div {
+.hero .features li div.icon,
+.hero .features li section.caption {
   background: #5F6C7D;
   height: 65px;
   width: 30px;
@@ -95,20 +116,46 @@ header.main section div:last-child {
 .hero .features li div.icon {
   height: 58px;
   width: 50px;
-  margin: 12px 0 0;
+  margin: 0;
   float: left;
+  background: #fff;
 }
 
-.hero .features li div.caption {
+.hero .features li section.caption {
   width: 240px;
   height: 57px;
   float: right;
   margin: 0 3px 0;
+  background: none;
+}
+
+.caption h2 {
+  text-align: left;
+  font-weight: 500;
+  margin-bottom: 0;
+  font-size: 1.8em;
+}
+
+.caption p {
+  color: #fff;
+  margin-top: 10px;
+  font-size: 1.4em;
 }
 
 .mission {
   height: 190px;
   background: #E8F0F5;
+}
+
+.mission h1,
+.action h1 {
+  color: #444559;
+  text-align: center;
+  margin-top: 0;
+  font-weight: 300;
+  font-size: 2.4em;
+  padding: 25px 5px;
+  line-height: 1.6;
 }
 
 .main.features {
@@ -139,16 +186,24 @@ header.main section div:last-child {
 
 .main.features article .feature-name {
   width: 410px;
-  height: 23px;
   display: block;
   margin: 12px auto;
+  text-align: center;
+  color: #555B64;
+  font-size: 2em;
+  font-weight: 400;
+  background: none;
 }
 
 .main.features article .feature-detail {
   width: 410px;
-  height: 50px;
   display: block;
   margin: 15px auto 0;
+  text-align: center;
+  color: #000;
+  font-size: 1.6em;
+  background: none;
+  line-height: 1.5;
 }
 
 .main.features article:last-child {
@@ -156,8 +211,13 @@ header.main section div:last-child {
 }
 
 .action {
-  padding: 98px 0 20px 0;
+  padding: 20px 0 20px 0;
   background: #E8F0F5;
+}
+
+.action h1 {
+  margin-top: 0;
+  padding-top: 0;
 }
 
 footer.main {
@@ -186,7 +246,7 @@ nav.legal {
 footer.main h4 {
   height: 25px;
   width: 132px;
-  background: #fff;
+  background: #000;
   margin: 0 auto;
   text-indent: -99999px;
 }
@@ -195,12 +255,19 @@ footer.main h4 {
 
 .createSite {
   width: 208px;
-  height: 52px;
   background: #1E8CBE;
   margin: 0 auto;
   border: none;
   display: block;
   box-sizing: content-box;
+}
+
+.createSite h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 2.3em;
+  font-weight: 500;
+  margin: 10px auto;
 }
 
 .createSite.highlight {
@@ -223,4 +290,12 @@ footer.main h4 {
   background: #1E8CBE;
   margin: 0 auto;
   border: none;
+}
+
+.action button h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 2.2em;
+  font-weight: 500;
+  margin: 10px auto;
 }
